[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
getrandom = { version = "0.2", features = ["js"]}
rand = "0.8"
serde = { version = "1.0", features = ["derive"]}

lib-simulation = { path = "../simulation" }

